Some MP clean-up; more to come - push for safekeeping