@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021 Oracle and/or its affiliates.
+ * Copyright (c) 2021, 2023 Oracle and/or its affiliates.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,10 +15,15 @@
  */
 package io.helidon.microprofile.metrics;
 
-import java.util.Arrays;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Set;
 
+import org.eclipse.microprofile.metrics.Counter;
+import org.eclipse.microprofile.metrics.Gauge;
+import org.eclipse.microprofile.metrics.Histogram;
+import org.eclipse.microprofile.metrics.Metric;
+import org.eclipse.microprofile.metrics.Timer;
 import org.junit.jupiter.api.Test;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.empty;
@@ -30,15 +35,18 @@ public class TestMetricTypeCoverage {
     @Test
     public void ensureAllMetricTypesHandled() {
 
-        Set<MetricType> found = new HashSet<>();
-        Set<MetricType> typesToCheck = new HashSet<>(Arrays.asList(MetricType.values()));
+        Set<Class<? extends Metric>> found = new HashSet<>();
+        Set<Class<? extends Metric>> typesToCheck = new HashSet<>(List.of(Counter.class,
+                                                                          Gauge.class,
+                                                                          Histogram.class,
+                                                                          Timer.class));
 
 
         // We do not use the general anno processing for gauges. There is no annotation for histogram.
-         typesToCheck.removeAll(Set.of(MetricType.INVALID, MetricType.GAUGE, MetricType.HISTOGRAM));
+         typesToCheck.removeAll(Set.of(Gauge.class, Histogram.class));
 
 
-        for (MetricType type : typesToCheck) {
+        for (Class<? extends Metric> type : typesToCheck) {
             for (MetricAnnotationInfo<?, ?> info : MetricAnnotationInfo.ANNOTATION_TYPE_TO_INFO.values()) {
                 if (info.metricType().equals(type)) {
                     found.add(type);
